:art: ui sidebar overhaul

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -13,7 +13,7 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
  ========================
 
 -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -141,6 +141,31 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
 					-webkit-transform: none;
 					transform: none;
 				}
+			}
+		</style>
+		<style id="scrollbar">
+			body::-webkit-scrollbar {
+				width: 0px;
+			}
+
+			*::-webkit-scrollbar {
+				width: 0px;
+			}
+
+			*::-webkit-scrollbar-track {
+				border-radius: 10px;
+			}
+
+			*::-webkit-scrollbar-thumb {
+				height: 56px;
+				border-radius: 8px;
+				border: 0px solid transparent;
+				background-clip: content-box;
+				background-color: #808080;
+			}
+
+			*::-webkit-scrollbar-thumb:hover {
+				background-color: #555;
 			}
 		</style>
 	</head>
