:rocket: optimize parallaz

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -17,7 +17,7 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Almondcove</title>
+		<title>JSM33T</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,35 +26,34 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
 
 		<link rel="stylesheet" href="assets/icons/around-icons.min.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-		<link rel="stylesheet" href="https://around.createx.studio/assets/vendor/swiper/swiper-bundle.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+        
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="Almondcove by Jass - A place to explore blogs, studios, apps, and more." />
-		<meta name="keywords" content="Almondcove, Jass, Blogs, Studio, Apps, Technology, Artifacts,music,jassi,jsm33t" />
+		<meta name="description" content="JSM33T's space - Blogs, Soundtracks, Gallery, Web artifacts, Apps and much more." />
+		<meta name="keywords" content="JSM33T, Jass, Blogs, Studio, Apps, Technology, Artifacts,music,jassi" />
 		<meta name="author" content="Jass" />
 		<meta name="robots" content="index, follow" />
 
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="Almondcove by Jass" />
-		<meta property="og:description" content="Explore Almondcove - a creative space for blogs, studios, apps, and more." />
-		<!-- <meta property="og:image" content="https://yourwebsite.com/path/to/almondcove-og-image.jpg" /> -->
-		<meta property="og:url" content="https://almondcove.in" />
+		<meta property="og:title" content="JSM33T's web sace" />
+		<meta property="og:description" content="JSM33T - a creative space for blogs, studios, apps, and more." />
+		<meta property="og:url" content="https://jsm33t.me" />
 		<meta property="og:type" content="website" />
-		<meta property="og:site_name" content="Almondcove" />
+		<meta property="og:site_name" content="JSM33T" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="Almondcove by Jass" />
+		<meta name="twitter:title" content="Jassi's web space" />
 
 		<meta name="twitter:description" content="Explore Almondcove - a creative space for blogs, studios, apps, and more." />
-		<!-- <meta name="twitter:image" content="https://almondcove.in/path/to/almondcove-twitter-image.jpg" /> -->
 		<meta name="twitter:site" content="@jsm33t" />
 
 		<!-- Additional Meta Tags -->
 		<meta property="og:locale" content="en_US" />
 		<meta property="article:author" content="Jass" />
 		<link ref="stylesheet" src="https://around.createx.studio/assets/vendor/lightgallery/css/lightgallery-bundle.min.css" />
-		<meta property="article:publisher" content="https://almondcove.in" />
+		<meta property="article:publisher" content="https://jsm33t.me" />
 		<meta name="theme-color" content="#1976d2" />
 		<style>
 			.page-loading {
