:art: prettified and refactored

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -13,7 +13,7 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
  ========================
 
 -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -26,9 +26,8 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
 
 		<link rel="stylesheet" href="assets/icons/around-icons.min.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-        
 		<!-- SEO Meta Tags -->
 		<meta name="description" content="JSM33T's space - Blogs, Soundtracks, Gallery, Web artifacts, Apps and much more." />
 		<meta name="keywords" content="JSM33T, Jass, Blogs, Studio, Apps, Technology, Artifacts,music,jassi" />
