:art: minor changes + likes count

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -1,11 +1,13 @@
 <!--
 
-       .__                             .___                            .__
-_____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
-\__  \ |  |  /     \ /  _ \ /    \  / __ |/ ___\/  _ \  \/ // __ \     |  |/    \
- / __ \|  |_|  Y Y  (  <_> )   |  \/ /_/ \  \__(  <_> )   /\  ___/     |  |   |  \
-(____  /____/__|_|  /\____/|___|  /\____ |\___  >____/ \_/  \___  > /\ |__|___|  /
-     \/           \/            \/      \/    \/                \/  \/         \/
+      ___   ________  ___      ___   _______   _______  ___________  
+     |"  | /"       )|"  \    /"  | /" __   ) /" __   )("     _   ") 
+     ||  |(:   \___/  \   \  //   |(__/ _) ./(__/ _) ./ )__/  \\__/  
+     |:  | \___  \    /\\  \/.    |    /  //     /  //     \\_ /     
+  ___|  /   __/  \\  |: \.        | __ \_ \\  __ \_ \\     |.  |     
+ /  :|_/ ) /" \   :) |.  \    /:  |(: \__) :\(: \__) :\    \:  |     
+(_______/ (_______/  |___|\__/|___| \_______) \_______)     \__|     
+
                                                                         v.2.0.0
 
  ========================    
@@ -51,7 +53,8 @@ _____  |  |   _____   ____   ____    __| _/____  _______  __ ____      |__| ____
 		<!-- Additional Meta Tags -->
 		<meta property="og:locale" content="en_US" />
 		<meta property="article:author" content="Jass" />
-		<link ref="stylesheet" src="https://around.createx.studio/assets/vendor/lightgallery/css/lightgallery-bundle.min.css" />
+		<!-- <link ref="stylesheet" src="https://around.createx.studio/assets/vendor/lightgallery/css/lightgallery-bundle.min.css" /> -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/css/lightgallery-bundle.min.css" integrity="sha256-Eg8Gfr1vMiM54szM1+h+M018fqWyvVU/Ml8q48Oub+g=" crossorigin="anonymous" />
 		<meta property="article:publisher" content="https://jsm33t.me" />
 		<meta name="theme-color" content="#1976d2" />
 		<style>
