:art: updated favicons

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -31,10 +31,15 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="JSM33T's space - Blogs, Soundtracks, Gallery, Web artifacts, Apps and much more." />
+		<meta name="description" content="  Jassi's digital webspace. Music,Apps,Blogs,Artifacts and much more. Join now for exclusive artifacts straight into your mail boxes" />
 		<meta name="keywords" content="JSM33T, Jass, Blogs, Studio, Apps, Technology, Artifacts,music,jassi" />
 		<meta name="author" content="Jass" />
 		<meta name="robots" content="index, follow" />
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+        <link rel="manifest" href="/assets/favicons/site.webmanifest">
 
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="JSM33T's web sace" />
